--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -7,8 +7,27 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Contributon Proposal System"
+      content="The CPS is part of the ICON Republic DAO governance which supports worthy projects through grants."
     />
+    <meta name="author" content="iBriz-ICONOsphere P-Rep">
+    <meta name="copyright" content="ICON Foundation">
+    <meta name="keywords" content="CPS, Contributon, Proposal, Governance">
+    <!-- <meta name="google-site-verification" content="C3Sw-2C2Eb3XCmYiRJRRxQR_9RVBLt_p6y1gzvJnGKg" /> -->
+    <meta name="application-name" content="CPS">
+    <meta property="og:title" content="CPS-Contribution Proposal System">
+    <meta property="og:type" content="website">
+    <!-- <meta property="og:image" content="%PUBLIC_URL%/logo-256.png"> -->
+    <meta property="og:url" content="https://cps.icon.community">
+    <meta property="og:description" content="The CPS is part of the ICON Republic DAO governance which supports worthy projects through grants.">
+    <meta property="og:site_name" content="CPS">
+    <!-- <meta property="twitter:card" content="summary_large_image"> -->
+    <!-- <meta name="twitter:site" content="@CPSofficial">
+    <meta name="twitter:creator" content="@CPSofficial"> -->
+    <meta name="twitter:title" content="CPS-Contribution Proposal System">
+    <meta name="twitter:description" content="The CPS is part of the ICON Republic DAO governance which supports worthy projects through grants.">
+    <!-- <meta name="twitter:image" content="%PUBLIC_URL%/logo-256.png"> -->
+    <meta name="robots" content="index, follow">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
