Added no-index meta tag

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -14,6 +14,7 @@
     <meta name="keywords" content="CPS, Contributon, Proposal, Governance">
     <!-- <meta name="google-site-verification" content="C3Sw-2C2Eb3XCmYiRJRRxQR_9RVBLt_p6y1gzvJnGKg" /> -->
     <meta name="application-name" content="CPS">
+    <meta name=”robots” content=”noindex”>
     <meta property="og:title" content="CPS-Contribution Proposal System">
     <meta property="og:type" content="website">
     <!-- <meta property="og:image" content="%PUBLIC_URL%/logo-256.png"> -->
