Open graph image for CPS

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -16,7 +16,7 @@
     <meta name="application-name" content="CPS">
     <meta property="og:title" content="CPS-Contribution Proposal System">
     <meta property="og:type" content="website">
-    <!-- <meta property="og:image" content="%PUBLIC_URL%/logo-256.png"> -->
+    <meta property="og:image" content="https://i.postimg.cc/zBqjwJ8h/favicon.png">
     <meta property="og:url" content="https://cps.icon.community">
     <meta property="og:description" content="The CPS is part of the ICON Republic DAO governance which supports worthy projects through grants.">
     <meta property="og:site_name" content="CPS">
