removing ibriz text

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="The CPS is part of the ICON Republic DAO governance which supports worthy projects through grants."
     />
-    <meta name="author" content="iBriz-ICONOsphere P-Rep">
+    <meta name="author" content="ICONOsphere P-Rep">
     <meta name="copyright" content="ICON Foundation">
     <meta name="keywords" content="CPS, Contributon, Proposal, Governance">
     <!-- <meta name="google-site-verification" content="C3Sw-2C2Eb3XCmYiRJRRxQR_9RVBLt_p6y1gzvJnGKg" /> -->
