--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -16,7 +16,7 @@
     <meta name="application-name" content="CPS">
     <meta property="og:title" content="CPS-Contribution Proposal System">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://cps.icon.community/screenshot.png">
+    <meta property="og:image" content="%PUBLIC_URL%/screenshot1.png">
     <meta property="og:url" content="https://cps.icon.community">
     <meta property="og:description" content="The CPS is part of the ICON Republic DAO governance which supports worthy projects through grants.">
     <meta property="og:site_name" content="CPS">
@@ -26,7 +26,7 @@
     <meta name="twitter:title" content="CPS-Contribution Proposal System">
     <meta name="twitter:description" content="The CPS is part of the ICON Republic DAO governance which supports worthy projects through grants.">
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:image:src" content="https://cps.icon.community/screenshot.png">
+    <meta property="twitter:image:src" content="%PUBLIC_URL%/screenshot1.png">
     <meta name="robots" content="index, follow">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
